package edu.fiuba.algo3.modelo.rangos;


/**
* @generated
*/
public class Detective implements GradoPolica {
    
    
    
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public CargarPistas() {
        //TODO
    }
    /**
    * @generated
    */
    public CalcularTiempoViaje() {
        //TODO
    }
    
}
