package edu.fiuba.algo3.modelo.rangos;


/**
* @generated
*/
public class Novato implements GradoPolica {
    
    
    
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public CargarPistas() {
        //TODO
    }
    /**
    * @generated
    */
    public CalcularTiempoViaje() {
        //TODO
    }
    
}
